# studytest

./: README.md
abc/: 10-at-a-time.c  Makefile  curl_get.c  curl_post.c  mkfifo  mkfifo.c  mkfifo_read  mkfifo_read.c  mkfifo_write  mkfifo_write.c  msq  msq.c  pipe  pipe.c  pthread  pthread.c  sem  sem.c  shm  shm.c  shm_get  shm_get.c  socket_client  socket_client.c  socket_server  socket_server.c  test1  test1.c  test2  test2.c  test3  test3.cpp  test4  test4.c  test5  test5.c
apr_test/: Makefile  Makefile.am  Makefile.in  ar-lib  config.guess  config.h  config.h.in  config.status  configure  configure.ac  libtool  main.c
apr_test/.deps/: main-main.Po  main.Po
apr_test/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
apr_test/src/: Makefile  Makefile.am  Makefile.in  test_str.c  test_str.h
apr_test/src/.deps/: libapr_test_a-test_array.Po  libapr_test_a-test_hash.Po  libapr_test_a-test_ring.Po  libapr_test_a-test_str.Po  libapr_test_a-test_table.Po  libapr_test_a-test_time.Po  test_array.Po  test_hash.Po  test_ring.Po  test_str.Po  test_table.Po  test_time.Po
baiduZhidaoCrawler/: README.md  baidu_zhidao.sql  crawlqa.py  hotword_zhidao.py  mp.py  seedproduce.py  washseed.py
cpp/: ConfigParser.cpp  ConfigParser.h  DB.cpp  DB.h  Http.cpp  Http.h  MD5.cpp  Makefile  Utils.cpp  Utils.h  config.ini  main.cpp  mark_oss.cpp  mark_oss.h  parseHTML.cpp  parseHTML.h  parseURL.cpp  parseURL.h  stdfx.h  test_algorithm.cpp  (+36 more)
down_parse_client/: Makefile.am  clientConfig.cpp  clientConfig.h  down_parse_client.cpp  down_parse_client.ini
down_parse_client/down_client/: Makefile.am  down_func.cpp  down_func.h  down_queue.cpp  down_queue.h  down_thread_arg.h  get_proxy_list.cpp  get_proxy_list.h  send_request.cpp  send_request.h
down_parse_client/down_client_thrift/: Makefile.am  downService.cpp  downService.h  download_constants.cpp  download_types.h
down_parse_client/jsoncpp/: jsoncpp_assertions.h  jsoncpp_autolink.h  jsoncpp_features.h  jsoncpp_forwards.h  jsoncpp_json.h  jsoncpp_reader.h  jsoncpp_value.h  jsoncpp_writer.h
down_parse_client/mysql/: DB.cpp  DB.h  Makefile.am  mark_oss.cpp  mark_oss.h
down_parse_client/parse_client/: Makefile.am  parse_func.cpp  parse_func.h  parse_queue.cpp  parse_queue.h  parse_thread_arg.h  send_parse.cpp  send_parse.h
down_parse_client/parse_client_thrift/: Makefile.am  srpp_parser.h  srpp_parser_types.cpp  srpp_parser_types.h
down_parse_client/task_server_thrift/: Makefile.am  down_parse_client_constants.cpp  down_parse_client_constants.h  down_parse_client_service.cpp  down_parse_client_service.h  down_parse_client_serviceHandler.cpp  down_parse_client_serviceHandler.h  down_parse_client_types.cpp  down_parse_client_types.h
down_parse_client/utils/: MD5.cpp  Makefile.am  Thread.cpp  Thread.h  URLEncoder.cpp  Utils.cpp  Utils.h
download_server/: Makefile.am  downServer.cpp  down_server.ini  sendfile.sh
download_server/down_action/: Makefile.am  downConfig.cpp  downConfig.h  download.cpp  download.h
download_server/script/: monitor.sh  rsync.sh  sendfile.sh
download_server/thrift_gen/: Makefile.am  download_constants.h  download_types.cpp
download_server/utils/: MD5.h  Makefile.am  Utils.cpp  Utils.h
mod_newpassport/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
mod_newpassport/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
mod_newpassport/newpassport/: Makefile  Makefile.am  Makefile.in  compress.c  compress.h  config_parser.c  config_parser.h  gen_sign.c  gen_sign.h  httpdh.h  mod_newpassport.c  mod_newpassport.h  response.saml  response_tool.c  saml_tool.c  utils.c  utils.h
mysql/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  config.sub  configure  configure.ac  libtool  main.c
mysql/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
mysql/send_so/: Makefile  Makefile.am  Makefile.in  send_so.c  send_so.h
mysql/send_so/.deps/: send_so.Plo
mysql/utils/: Makefile  Makefile.am  Makefile.in  utils.c  utils.h
mysql/utils/.deps/: utils.Po
page_download/client/: Makefile.am  client.cpp  grab_page.h  page_download_constants.cpp  page_download_types.cpp
page_download/download/: Makefile.am  download.cpp  parser_client.cpp  srpp_parser.thrift
page_download/download/down/: Makefile.am  pageDispatch.cpp  pageDownload.cpp  pageDownload.cpp.bak  pageDownload.h  pageDownload.h.bak  thread_func.cpp  thread_func.h
page_download/download/mysql/: DB.cpp  DB.h  Makefile.am  mark_oss.cpp  mark_oss.h
page_download/download/parser_request/: Makefile.am  doParse.cpp  doParse.h  parserConfig.cpp  parserConfig.h  parserDispatch.cpp  parserDispatch.h  thread_func.cpp  thread_func.h
page_download/download/parser_thrift/: Makefile.am  srpp_parser.cpp  srpp_parser.h  srpp_parser_constants.cpp  srpp_parser_constants.h  srpp_parser_types.cpp
page_download/download/threadManage/: Queue.h  Thread.cpp
page_download/download/utils/: MD5.cpp  Utils.cpp  Utils.h
page_download/server/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool  server.cpp  task.cpp
page_download/server/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
page_download/server/grab/: Makefile.am  pageDispatch.cpp  pageDispatch.h  pageDownload.cpp  pageDownload.h  pageParse.cpp  pageParse.h  prepare.cpp  prepare.h  thread_func.cpp  thread_func.h
page_download/server/mysql/: DB.cpp  DB.h  mark_oss.cpp  mark_oss.h
page_download/server/server/: Makefile.am  grab_page.cpp  grab_page.h  page_download_constants.cpp  page_download_constants.h  page_download_types.cpp  page_download_types.h
page_download/server/threadManage/: Makefile.am  Queue.cpp  Queue.h  Thread.cpp  Thread.h
page_download/server/utils/: ConfigParser.cpp  ConfigParser.h  Global.cpp  Global.h  Makefile.am  URLEncoder.cpp  URLEncoder.h  Utils.cpp  Utils.h  parseHTML.cpp  parseHTML.h
(+230 files in other folders)
