noinst_LIBRARIES=libdown_client.a
libdown_client_a_SOURCES=	get_proxy_list.h get_proxy_list.cpp \
							send_request.h send_request.cpp down_thread_arg.h \
							down_queue.h down_queue.cpp \
							down_func.h  down_func.cpp
libdown_client_a_CPPFLAGS=-I/usr/local/mysql/include

					
					
					
