noinst_LIBRARIES=libtask_server_thrift.a
libtask_server_thrift_a_SOURCES=down_parse_client_constants.h down_parse_client_constants.cpp \
								down_parse_client_service.h down_parse_client_service.cpp \
								down_parse_client_serviceHandler.cpp down_parse_client_serviceHandler.h \
								down_parse_client_types.cpp down_parse_client_types.h
libtask_server_thrift_a_CPPFLAGS=-I/usr/local/mysql/include
							

					
					
					
